--- a/ToyProjectManagementApp/Views/Popup/projectCollectionViewPopup.xib
+++ b/ToyProjectManagementApp/Views/Popup/projectCollectionViewPopup.xib
@@ -12,8 +12,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProjectPopupViewController" customModule="ToyProjectManagementApp" customModuleProvider="target">
             <connections>
                 <outlet property="backGroundView" destination="iN0-l3-epB" id="6KL-zA-JnY"/>
+                <outlet property="changePrograssButton" destination="I7N-ds-50Q" id="bg2-7V-FYJ"/>
                 <outlet property="deleteButton" destination="ihz-Dj-ooG" id="08e-wp-JBV"/>
-                <outlet property="infoButton" destination="I7N-ds-50Q" id="1mC-bA-8ez"/>
                 <outlet property="popUpView" destination="F3H-E8-17G" id="spJ-4p-hTc"/>
                 <outlet property="view" destination="iN0-l3-epB" id="ZXm-Ys-GVO"/>
             </connections>
@@ -32,11 +32,11 @@
                                 <button opaque="NO" tag="1" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I7N-ds-50Q">
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="46"/>
                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                    <state key="normal" title="프로젝트 완료하기">
+                                    <state key="normal" title="프로젝트 상태변경">
                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </state>
                                     <connections>
-                                        <action selector="cellInfo:" destination="-1" eventType="touchUpInside" id="Lz9-5t-43C"/>
+                                        <action selector="cellChangePrograss:" destination="-1" eventType="touchUpInside" id="uU0-XR-Yur"/>
                                     </connections>
                                 </button>
                                 <button opaque="NO" tag="2" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ihz-Dj-ooG">
