--- a/ToyProjectManagementApp/Views/Cell/ProjectCardCell.xib
+++ b/ToyProjectManagementApp/Views/Cell/ProjectCardCell.xib
@@ -10,89 +10,69 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ProjectCardCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProjectCardCell" id="HTn-zG-OtX" customClass="ProjectContentTableViewCell" customModule="ToyProjectManagementApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="95"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ProjectCardCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProjectCardCell" rowHeight="93" id="HTn-zG-OtX" customClass="ProjectContentTableViewCell" customModule="ToyProjectManagementApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="93"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" restorationIdentifier="ProjectContetnCell" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HTn-zG-OtX" id="XJA-nV-Oq5">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="95"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="ProjectContetnCell" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HTn-zG-OtX" id="XJA-nV-Oq5">
+                <rect key="frame" x="0.0" y="0.0" width="414" height="93"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="lP6-Ae-CYy">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="95"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F5M-O0-onQ">
-                                <rect key="frame" x="20" y="20" width="15" height="15"/>
-                                <color key="backgroundColor" systemColor="systemBlueColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="F5M-O0-onQ" secondAttribute="height" id="K1K-zd-7Hx"/>
-                                    <constraint firstAttribute="width" constant="15" id="bT9-zi-T2R"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" buttonSize="medium"/>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="249" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sOh-W6-ug4">
-                                <rect key="frame" x="49" y="20" width="345" height="20.333333333333329"/>
-                                <string key="text">LabLabLabLabLabLabLabLabLabLabLaLabLabLabLabLabLabLabLabLabLabLaLabLabLabLabLabLabLabLabLabLabLaLabLabLabLabLabLabLabLabLabLabLaLabLabLabLabLabLabLabLabLabLabLaLabLabLabLabLabLabLabLabLabLabLa</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="bY3-o5-s1h">
-                                <rect key="frame" x="49" y="54.333333333333336" width="259" height="20.333333333333336"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L57-nW-62z">
-                                        <rect key="frame" x="0.0" y="0.0" width="86.333333333333329" height="20.333333333333332"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="~" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W2P-fS-TfR">
-                                        <rect key="frame" x="86.333333333333343" y="0.0" width="86.333333333333343" height="20.333333333333332"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uPM-MP-RAM">
-                                        <rect key="frame" x="172.66666666666666" y="0.0" width="86.333333333333343" height="20.333333333333332"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
-                        </subviews>
-                        <color key="backgroundColor" red="0.93702651515151514" green="0.93702651515151514" blue="0.93702651515151514" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F5M-O0-onQ">
+                        <rect key="frame" x="20" y="20" width="20" height="20"/>
+                        <color key="backgroundColor" systemColor="systemBlueColor"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="bY3-o5-s1h" secondAttribute="bottom" constant="20.333333333333329" id="1hg-im-XBe"/>
-                            <constraint firstItem="sOh-W6-ug4" firstAttribute="leading" secondItem="F5M-O0-onQ" secondAttribute="trailing" constant="14" id="DO5-Q6-hdi"/>
-                            <constraint firstItem="bY3-o5-s1h" firstAttribute="leading" secondItem="sOh-W6-ug4" secondAttribute="leading" id="GEZ-HZ-sIP"/>
-                            <constraint firstItem="sOh-W6-ug4" firstAttribute="top" secondItem="F5M-O0-onQ" secondAttribute="top" id="STR-sg-eUs"/>
-                            <constraint firstAttribute="trailing" secondItem="sOh-W6-ug4" secondAttribute="trailing" constant="20" id="Z2J-9s-1fk"/>
-                            <constraint firstAttribute="trailing" secondItem="bY3-o5-s1h" secondAttribute="trailing" constant="106" id="ixo-aM-BDB"/>
-                            <constraint firstItem="bY3-o5-s1h" firstAttribute="top" secondItem="sOh-W6-ug4" secondAttribute="bottom" constant="14" id="kJ8-Ep-0oT"/>
-                            <constraint firstItem="F5M-O0-onQ" firstAttribute="leading" secondItem="lP6-Ae-CYy" secondAttribute="leading" constant="20" id="kvu-7M-Fi3"/>
-                            <constraint firstItem="F5M-O0-onQ" firstAttribute="top" secondItem="lP6-Ae-CYy" secondAttribute="top" constant="20" id="r5w-SW-4YR"/>
+                            <constraint firstAttribute="width" secondItem="F5M-O0-onQ" secondAttribute="height" id="K1K-zd-7Hx"/>
+                            <constraint firstAttribute="width" constant="20" id="bT9-zi-T2R"/>
                         </constraints>
-                    </view>
+                        <state key="normal" title="Button"/>
+                        <buttonConfiguration key="configuration" style="plain" buttonSize="medium"/>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="card Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sOh-W6-ug4">
+                        <rect key="frame" x="54" y="20" width="302" height="18.666666666666671"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dm6-lY-CN5">
+                        <rect key="frame" x="54" y="52.666666666666664" width="37.666666666666657" height="20.333333333333336"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jfJ-J4-iUP">
+                        <rect key="frame" x="364" y="20" width="30" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="926-PB-ipY"/>
+                            <constraint firstAttribute="width" constant="30" id="Tjs-Jj-IUF"/>
+                        </constraints>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <state key="normal" title="Button"/>
+                        <buttonConfiguration key="configuration" style="plain" image="ellipsis" catalog="system"/>
+                    </button>
                 </subviews>
-                <color key="backgroundColor" red="0.97924558080000002" green="0.97924558080000002" blue="0.97924558080000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 <constraints>
-                    <constraint firstItem="lP6-Ae-CYy" firstAttribute="top" secondItem="XJA-nV-Oq5" secondAttribute="top" id="9fx-EZ-JRl"/>
-                    <constraint firstAttribute="trailing" secondItem="lP6-Ae-CYy" secondAttribute="trailing" id="GtZ-mb-pgN"/>
-                    <constraint firstAttribute="bottom" secondItem="lP6-Ae-CYy" secondAttribute="bottom" id="kBr-jU-1jk"/>
-                    <constraint firstItem="lP6-Ae-CYy" firstAttribute="leading" secondItem="XJA-nV-Oq5" secondAttribute="leading" id="xAM-jh-3v5"/>
+                    <constraint firstItem="dm6-lY-CN5" firstAttribute="leading" secondItem="sOh-W6-ug4" secondAttribute="leading" id="2H7-2w-D53"/>
+                    <constraint firstItem="F5M-O0-onQ" firstAttribute="top" secondItem="XJA-nV-Oq5" secondAttribute="top" constant="20" id="3Qx-0o-m4n"/>
+                    <constraint firstItem="jfJ-J4-iUP" firstAttribute="leading" secondItem="sOh-W6-ug4" secondAttribute="trailing" constant="8" id="7xY-xg-pNt"/>
+                    <constraint firstAttribute="trailing" secondItem="jfJ-J4-iUP" secondAttribute="trailing" constant="20" id="K3a-SJ-g6Q"/>
+                    <constraint firstItem="dm6-lY-CN5" firstAttribute="top" relation="greaterThanOrEqual" secondItem="sOh-W6-ug4" secondAttribute="bottom" constant="14" id="UtK-ee-cUY"/>
+                    <constraint firstItem="F5M-O0-onQ" firstAttribute="leading" secondItem="XJA-nV-Oq5" secondAttribute="leading" constant="20" id="cxe-tD-Nud"/>
+                    <constraint firstAttribute="bottom" secondItem="dm6-lY-CN5" secondAttribute="bottom" constant="20" id="f6o-Kg-pVk"/>
+                    <constraint firstItem="sOh-W6-ug4" firstAttribute="top" secondItem="F5M-O0-onQ" secondAttribute="top" id="faV-Zi-SWD"/>
+                    <constraint firstItem="jfJ-J4-iUP" firstAttribute="top" secondItem="F5M-O0-onQ" secondAttribute="top" id="raB-bO-mBb"/>
+                    <constraint firstItem="sOh-W6-ug4" firstAttribute="leading" secondItem="F5M-O0-onQ" secondAttribute="trailing" constant="14" id="vEt-PX-sTq"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="cardColor" destination="F5M-O0-onQ" id="xeI-nA-553"/>
                 <outlet property="contentLabel" destination="sOh-W6-ug4" id="ugx-YR-D1X"/>
+                <outlet property="timeLabel" destination="dm6-lY-CN5" id="8UQ-mR-T0e"/>
             </connections>
-            <point key="canvasLocation" x="-26.153846153846153" y="-3.1990521327014219"/>
+            <point key="canvasLocation" x="-26.153846153846153" y="-3.9099526066350707"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="ellipsis" catalog="system" width="128" height="37"/>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
