--- a/ToyProjectManagementApp/Views/ProjectContent.storyboard
+++ b/ToyProjectManagementApp/Views/ProjectContent.storyboard
@@ -18,31 +18,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UlV-Wq-1Ov">
-                                <rect key="frame" x="0.0" y="0.0" width="390" height="200"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UlV-Wq-1Ov" customClass="ProjectStickyHeaderView" customModule="ToyProjectManagementApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="300"/>
                                 <color key="backgroundColor" name="primaryColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="tlF-zt-VZq"/>
+                                    <constraint firstAttribute="height" constant="300" id="tlF-zt-VZq"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0Jb-RN-iL8">
-                                <rect key="frame" x="10" y="157" width="370" height="618.66666666666663"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="PCr-sd-0Ds">
-                                        <rect key="frame" x="0.0" y="50" width="370" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PCr-sd-0Ds" id="PaA-xC-2n6">
-                                            <rect key="frame" x="0.0" y="0.0" width="370" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="8h9-Qi-KrF" appends="YES" id="tGF-Nm-9U6"/>
-                                </connections>
-                            </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EaT-ps-OOl" userLabel="back Button">
                                 <rect key="frame" x="10" y="57" width="39.666666666666664" height="34.333333333333343"/>
                                 <state key="normal" title="Button"/>
@@ -103,32 +85,41 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="insetGrouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0Rb-YF-Pf6">
+                                <rect key="frame" x="0.0" y="149.33333333333331" width="390" height="612.33333333333348"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <sections/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="8h9-Qi-KrF" appends="YES" id="9e5-oZ-bqx"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="JE4-Nm-gh3"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="zp5-w9-uSR" firstAttribute="top" secondItem="JE4-Nm-gh3" secondAttribute="top" constant="10" id="0fv-hy-GEH"/>
                             <constraint firstItem="JE4-Nm-gh3" firstAttribute="trailing" secondItem="UlV-Wq-1Ov" secondAttribute="trailing" id="1nG-mH-Q9P"/>
                             <constraint firstItem="JE4-Nm-gh3" firstAttribute="trailing" secondItem="zp5-w9-uSR" secondAttribute="trailing" constant="10" id="AaT-Ax-xIc"/>
                             <constraint firstItem="gTg-er-ebw" firstAttribute="top" secondItem="EaT-ps-OOl" secondAttribute="bottom" constant="20" id="Bp2-FA-FQP"/>
+                            <constraint firstItem="0Rb-YF-Pf6" firstAttribute="leading" secondItem="JE4-Nm-gh3" secondAttribute="leading" id="COY-y4-JLK"/>
+                            <constraint firstItem="8cM-Lj-T8c" firstAttribute="top" secondItem="0Rb-YF-Pf6" secondAttribute="bottom" constant="14" id="D1k-FL-tKl"/>
+                            <constraint firstItem="JE4-Nm-gh3" firstAttribute="trailing" secondItem="0Rb-YF-Pf6" secondAttribute="trailing" id="F03-aQ-ylj"/>
                             <constraint firstItem="EaT-ps-OOl" firstAttribute="top" secondItem="JE4-Nm-gh3" secondAttribute="top" constant="10" id="L3x-Xw-AfZ"/>
-                            <constraint firstItem="JE4-Nm-gh3" firstAttribute="trailing" secondItem="0Jb-RN-iL8" secondAttribute="trailing" constant="10" id="Ms5-8F-yhJ"/>
                             <constraint firstItem="JE4-Nm-gh3" firstAttribute="trailing" secondItem="8cM-Lj-T8c" secondAttribute="trailing" id="OJV-nA-lcb"/>
                             <constraint firstAttribute="top" secondItem="UlV-Wq-1Ov" secondAttribute="top" id="PWj-Ds-p6Q"/>
                             <constraint firstItem="EaT-ps-OOl" firstAttribute="leading" secondItem="JE4-Nm-gh3" secondAttribute="leading" constant="10" id="UjX-Uh-GPk"/>
                             <constraint firstItem="8cM-Lj-T8c" firstAttribute="leading" secondItem="JE4-Nm-gh3" secondAttribute="leading" id="Uwc-fS-cA2"/>
                             <constraint firstItem="gTg-er-ebw" firstAttribute="leading" secondItem="JE4-Nm-gh3" secondAttribute="leading" constant="20" id="Wbc-hW-CX5"/>
-                            <constraint firstItem="0Jb-RN-iL8" firstAttribute="top" secondItem="gTg-er-ebw" secondAttribute="bottom" constant="21.666666666666686" id="Xip-qW-ECT"/>
                             <constraint firstItem="UlV-Wq-1Ov" firstAttribute="leading" secondItem="JE4-Nm-gh3" secondAttribute="leading" id="a6o-GE-NJy"/>
-                            <constraint firstItem="0Jb-RN-iL8" firstAttribute="leading" secondItem="JE4-Nm-gh3" secondAttribute="leading" constant="10" id="edB-BD-cAC"/>
                             <constraint firstItem="8cM-Lj-T8c" firstAttribute="bottom" secondItem="JE4-Nm-gh3" secondAttribute="bottom" id="lM3-Eg-onQ"/>
-                            <constraint firstItem="8cM-Lj-T8c" firstAttribute="top" secondItem="0Jb-RN-iL8" secondAttribute="bottom" id="p7k-65-np9"/>
                             <constraint firstItem="JE4-Nm-gh3" firstAttribute="trailing" secondItem="gTg-er-ebw" secondAttribute="trailing" constant="20" id="tuG-XX-iCV"/>
+                            <constraint firstItem="0Rb-YF-Pf6" firstAttribute="top" secondItem="gTg-er-ebw" secondAttribute="bottom" constant="14" id="zec-ca-626"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="addListButton" destination="zp5-w9-uSR" id="wey-TJ-fOK"/>
-                        <outlet property="cardTableView" destination="0Jb-RN-iL8" id="BRq-Eb-goD"/>
+                        <outlet property="cardTableView" destination="0Rb-YF-Pf6" id="iWT-1C-r71"/>
                         <outlet property="contentTitleLabel" destination="gTg-er-ebw" id="i6O-Vq-5RL"/>
                         <outlet property="moveLeftButton" destination="uw9-5R-07c" id="7PC-Ku-2gI"/>
                         <outlet property="moveRightButton" destination="FzS-g3-tVP" id="oCi-ko-En2"/>
