--- a/ToyProjectManagementApp/Views/ProjectContentSideMenu.storyboard
+++ b/ToyProjectManagementApp/Views/ProjectContentSideMenu.storyboard
@@ -1,90 +1,136 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AIT-26-UTc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Custom Side Menu Navigation-->
-        <scene sceneID="nLv-Fz-Bu5">
-            <objects>
-                <navigationController storyboardIdentifier="SideBarView" id="AIT-26-UTc" customClass="CustomSideMenuNavigation" customModule="CooperationApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sjq-nt-sqv">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="ayF-Af-GzK" kind="relationship" relationship="rootViewController" id="iow-Rl-abn"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ph3-kh-G7b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-577" y="86"/>
-        </scene>
         <!--Project Side Bar View Controller-->
         <scene sceneID="KIw-bS-D4o">
             <objects>
-                <viewController restorationIdentifier="ProjectSideBarViewController" storyboardIdentifier="ProjectSideBarViewController" id="ayF-Af-GzK" customClass="ProjectSideBarViewController" customModule="CooperationApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ProjectSideBarViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ayF-Af-GzK" customClass="ProjectSideBarViewController" customModule="ToyProjectManagementApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="x2G-wz-0u7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="sideBarTableView" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="RMb-61-W3b">
-                                <rect key="frame" x="0.0" y="108" width="414" height="754"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="sideBarTableView" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="insetGrouped" separatorStyle="singleLineEtched" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="RMb-61-W3b">
+                                <rect key="frame" x="0.0" y="156.5" width="414" height="507.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="YVO-66-8XJ">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                        <rect key="frame" x="20" y="55.5" width="374" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YVO-66-8XJ" id="rMd-eB-jTw">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="KFR-Jy-zj3">
-                                        <rect key="frame" x="0.0" y="88" width="414" height="43.5"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KFR-Jy-zj3" id="PER-gD-Usq">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="1oe-kO-zJl">
-                                        <rect key="frame" x="0.0" y="131.5" width="414" height="43.5"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1oe-kO-zJl" id="Mlu-r6-4Bq">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                                 <sections/>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="리스트 관리" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1kH-AG-gCh">
+                                <rect key="frame" x="14" y="116" width="386" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s7H-zo-2U5">
+                                <rect key="frame" x="14" y="62" width="46" height="34"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="xmark" catalog="system"/>
+                                <connections>
+                                    <action selector="tapBackButton:" destination="ayF-Af-GzK" eventType="touchUpInside" id="rk5-hf-u3D"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="wEn-0e-gao">
+                                <rect key="frame" x="14" y="678" width="386" height="170"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mxX-zB-A2n">
+                                        <rect key="frame" x="0.0" y="0.0" width="386" height="50"/>
+                                        <color key="backgroundColor" name="primaryColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="6gn-Rz-HSY"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="이동하기"/>
+                                        <connections>
+                                            <action selector="tapMoveListButton:" destination="ayF-Af-GzK" eventType="touchUpInside" id="WBw-hA-D2g"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BLr-gG-Axp">
+                                        <rect key="frame" x="0.0" y="60" width="386" height="50"/>
+                                        <color key="backgroundColor" name="primaryColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="h74-hV-K0y"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="이름 변경하기"/>
+                                        <connections>
+                                            <action selector="tapChangeListTitleButton:" destination="ayF-Af-GzK" eventType="touchUpInside" id="dgh-tQ-7O0"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8dh-Nr-WPW">
+                                        <rect key="frame" x="0.0" y="120" width="386" height="50"/>
+                                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="O8R-bE-AUb"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="삭제하기"/>
+                                        <connections>
+                                            <action selector="tapDeleteListButton:" destination="ayF-Af-GzK" eventType="touchUpInside" id="W34-sL-pVo"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4wy-mE-d5N"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="RMb-61-W3b" firstAttribute="leading" secondItem="4wy-mE-d5N" secondAttribute="leading" id="3Mm-3H-Mbz"/>
-                            <constraint firstItem="RMb-61-W3b" firstAttribute="top" secondItem="4wy-mE-d5N" secondAttribute="top" constant="20" id="VEL-ip-EIj"/>
-                            <constraint firstItem="4wy-mE-d5N" firstAttribute="bottom" secondItem="RMb-61-W3b" secondAttribute="bottom" id="iv4-B2-g4N"/>
+                            <constraint firstItem="wEn-0e-gao" firstAttribute="top" secondItem="RMb-61-W3b" secondAttribute="bottom" constant="14" id="3a6-XU-gpT"/>
+                            <constraint firstItem="4wy-mE-d5N" firstAttribute="trailing" secondItem="1kH-AG-gCh" secondAttribute="trailing" constant="14" id="FTF-bC-6yy"/>
+                            <constraint firstItem="1kH-AG-gCh" firstAttribute="top" secondItem="s7H-zo-2U5" secondAttribute="bottom" constant="20" id="LIA-UN-cFx"/>
+                            <constraint firstItem="RMb-61-W3b" firstAttribute="top" secondItem="1kH-AG-gCh" secondAttribute="bottom" constant="20" id="Rdt-1Q-vJD"/>
+                            <constraint firstItem="wEn-0e-gao" firstAttribute="leading" secondItem="4wy-mE-d5N" secondAttribute="leading" constant="14" id="XUu-eL-bzB"/>
+                            <constraint firstItem="s7H-zo-2U5" firstAttribute="leading" secondItem="4wy-mE-d5N" secondAttribute="leading" constant="14" id="fdi-HM-5uP"/>
+                            <constraint firstItem="4wy-mE-d5N" firstAttribute="bottom" secondItem="wEn-0e-gao" secondAttribute="bottom" constant="14" id="iqn-dM-0DW"/>
+                            <constraint firstItem="1kH-AG-gCh" firstAttribute="leading" secondItem="s7H-zo-2U5" secondAttribute="leading" id="ir6-88-dVb"/>
+                            <constraint firstItem="4wy-mE-d5N" firstAttribute="trailing" secondItem="wEn-0e-gao" secondAttribute="trailing" constant="14" id="rN1-uO-PKQ"/>
                             <constraint firstItem="4wy-mE-d5N" firstAttribute="trailing" secondItem="RMb-61-W3b" secondAttribute="trailing" id="wpV-3C-Jcc"/>
+                            <constraint firstItem="s7H-zo-2U5" firstAttribute="top" secondItem="4wy-mE-d5N" secondAttribute="top" constant="14" id="yOU-Dv-9aL"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="uey-kl-jsT"/>
                     <connections>
+                        <outlet property="changeListTitleButton" destination="BLr-gG-Axp" id="qvU-vH-aRx"/>
+                        <outlet property="deleteListButton" destination="8dh-Nr-WPW" id="fZc-zB-ZXM"/>
+                        <outlet property="moveListButton" destination="mxX-zB-A2n" id="x44-ff-w9B"/>
                         <outlet property="sideBarTableView" destination="RMb-61-W3b" id="7uf-DK-mq5"/>
+                        <outlet property="titleLabel" destination="1kH-AG-gCh" id="4Ed-pl-4jz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="APi-nl-pdo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="265" y="82"/>
+            <point key="canvasLocation" x="263.768115942029" y="81.696428571428569"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <image name="xmark" catalog="system" width="128" height="113"/>
+        <namedColor name="primaryColor">
+            <color red="0.72941176470588232" green="0.59999999999999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
