--- a/ToyProjectManagementApp/Views/Cell/ProjectContentSideBar.xib
+++ b/ToyProjectManagementApp/Views/Cell/ProjectContentSideBar.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="187" id="O0t-6g-6k4" customClass="ProjectSideBarTableViewCell" customModule="ToyProjectManagementApp" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="187" id="O0t-6g-6k4" customClass="ProjectListManagementCell" customModule="ToyProjectManagementApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="539" height="187"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="O0t-6g-6k4" id="KAj-2Q-k4q">
@@ -28,7 +28,7 @@
                                     <constraint firstAttribute="width" secondItem="lJd-Xp-4Yj" secondAttribute="height" id="aTq-5e-nIZ"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="ProjectContentSideBarCell" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ao6-fW-ccq">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ao6-fW-ccq">
                                 <rect key="frame" x="25" y="69.5" width="451" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -53,8 +53,8 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="currentPageCheckImageView" destination="lJd-Xp-4Yj" id="Vej-Bs-xYp"/>
+                <outlet property="listTitle" destination="Ao6-fW-ccq" id="QjY-aY-q7B"/>
                 <outlet property="selectImageView" destination="WMf-rH-RQ0" id="n6r-zK-jD3"/>
-                <outlet property="sideBarList" destination="Ao6-fW-ccq" id="QjY-aY-q7B"/>
             </connections>
             <point key="canvasLocation" x="241.30434782608697" y="93.415178571428569"/>
         </tableViewCell>
