--- a/ToyProjectManagementApp/Views/Popup/ChangeListTitlePopup.xib
+++ b/ToyProjectManagementApp/Views/Popup/ChangeListTitlePopup.xib
@@ -1,18 +1,93 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChangeListTitlePopupViewController" customModule="ToyProjectManagementApp" customModuleProvider="target">
+            <connections>
+                <outlet property="cancelButton" destination="G9r-k4-Q1T" id="33a-cs-wAg"/>
+                <outlet property="changeListTitleButton" destination="T3z-4k-SbQ" id="O5f-nF-A3i"/>
+                <outlet property="changeListTitleTextField" destination="YRt-lz-MBA" id="tr9-e7-BRS"/>
+                <outlet property="popupTitleLabel" destination="zKR-ly-qpK" id="zFX-a2-xv5"/>
+                <outlet property="view" destination="g9T-yt-ViY" id="tH5-BG-9wR"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+        <view contentMode="scaleToFill" id="g9T-yt-ViY">
+            <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <subviews>
+                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YRt-lz-MBA" customClass="CustomTextField" customModule="ToyProjectManagementApp" customModuleProvider="target">
+                    <rect key="frame" x="14" y="95.333333333333329" width="362" height="49.999999999999986"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="Wjw-yW-eYR"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="JM5-uJ-k40">
+                    <rect key="frame" x="14" y="159.33333333333334" width="362" height="45"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G9r-k4-Q1T">
+                            <rect key="frame" x="0.0" y="0.0" width="176" height="45"/>
+                            <color key="backgroundColor" name="primaryColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="45" id="bL2-Dn-exk"/>
+                            </constraints>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <state key="normal" title="Button"/>
+                            <buttonConfiguration key="configuration" style="plain" title="취소"/>
+                            <connections>
+                                <action selector="tapCancelButton:" destination="-1" eventType="touchUpInside" id="EO3-hL-S8Z"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T3z-4k-SbQ">
+                            <rect key="frame" x="186" y="0.0" width="176" height="45"/>
+                            <color key="backgroundColor" name="primaryColor"/>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <state key="normal" title="Button"/>
+                            <buttonConfiguration key="configuration" style="plain" title="생성하기"/>
+                            <connections>
+                                <action selector="tapChangelistTitleButton:" destination="-1" eventType="touchUpInside" id="pnV-L7-pXM"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                </stackView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="리스트 이름 변경" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zKR-ly-qpK">
+                    <rect key="frame" x="14.000000000000007" y="61.000000000000007" width="111.66666666666669" height="20.333333333333336"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
+            <viewLayoutGuide key="safeArea" id="ed2-rg-r46"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="zKR-ly-qpK" firstAttribute="top" secondItem="ed2-rg-r46" secondAttribute="top" constant="14" id="1fM-RW-FgJ"/>
+                <constraint firstItem="YRt-lz-MBA" firstAttribute="top" secondItem="zKR-ly-qpK" secondAttribute="bottom" constant="14" id="2Wj-3o-kai"/>
+                <constraint firstItem="JM5-uJ-k40" firstAttribute="trailing" secondItem="YRt-lz-MBA" secondAttribute="trailing" id="LvQ-nu-Sn3"/>
+                <constraint firstItem="YRt-lz-MBA" firstAttribute="leading" secondItem="zKR-ly-qpK" secondAttribute="leading" id="Nwj-uk-d2w"/>
+                <constraint firstItem="ed2-rg-r46" firstAttribute="trailing" secondItem="YRt-lz-MBA" secondAttribute="trailing" constant="14" id="REH-U7-E6A"/>
+                <constraint firstItem="JM5-uJ-k40" firstAttribute="leading" secondItem="YRt-lz-MBA" secondAttribute="leading" id="cjT-bS-iBM"/>
+                <constraint firstItem="zKR-ly-qpK" firstAttribute="leading" secondItem="ed2-rg-r46" secondAttribute="leading" constant="14" id="n13-EM-yhV"/>
+                <constraint firstItem="JM5-uJ-k40" firstAttribute="top" secondItem="YRt-lz-MBA" secondAttribute="bottom" constant="14" id="w4s-KB-DaY"/>
+            </constraints>
+            <point key="canvasLocation" x="-103.07692307692308" y="49.763033175355446"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryColor">
+            <color red="0.72941176470588232" green="0.59999999999999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
