--- a/ToyProjectManagementApp/Views/ProjectContent.storyboard
+++ b/ToyProjectManagementApp/Views/ProjectContent.storyboard
@@ -96,7 +96,7 @@
                                 <rect key="frame" x="0.0" y="775.66666666666663" width="390" height="34.333333333333371"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uw9-5R-07c">
-                                        <rect key="frame" x="0.0" y="0.0" width="130" height="34.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="97.666666666666671" height="34.333333333333336"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="arrowshape.left.fill" catalog="system">
                                             <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -106,7 +106,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JvD-SI-1wR">
-                                        <rect key="frame" x="130" y="0.0" width="130" height="34.333333333333336"/>
+                                        <rect key="frame" x="97.666666666666686" y="0.0" width="97.333333333333314" height="34.333333333333336"/>
                                         <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="gearshape.fill" catalog="system"/>
@@ -114,8 +114,11 @@
                                             <action selector="showSideBar:" destination="gsB-19-J9G" eventType="touchUpInside" id="VHp-5y-bRj"/>
                                         </connections>
                                     </button>
+                                    <colorWell contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="fo3-ZC-94j">
+                                        <rect key="frame" x="195" y="0.0" width="97.666666666666686" height="34.333333333333336"/>
+                                    </colorWell>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FzS-g3-tVP">
-                                        <rect key="frame" x="260" y="0.0" width="130" height="34.333333333333336"/>
+                                        <rect key="frame" x="292.66666666666669" y="0.0" width="97.333333333333314" height="34.333333333333336"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="arrowshape.right.fill" catalog="system" title="">
                                             <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
